--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,3 +12,7 @@ input[type="search"] {
     box-shadow: none;
     /*box-shadow:inset 0 0 1px orange;*/
 }
+
+.active {
+    font-weight: bold;
+ }
